[metadata]
name = lenskit-build-helpers
version = attr: lkbuild.__version__
description = Support code for building LensKit packages
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
author = Michael Ekstrand
author_email = michaelekstrand@boisestate.edu
url = https://github.com/lenskit/lenskit-build-helpers

[options]
zip_safe = False
packages = lkbuild
python_requires = >=3.7
install_requires =
    setuptools >=42.0
    wheel
    pyyaml
    packaging

[options.extras_require]
dev =
    flake8 >=3

[options.entry_points]
distutils.commands =
    conda = lkbuild.conda:CondaEnv
